# mxtac

./: .editorconfig  00-README.md  01-REQUIREMENTS.md  02-PRODUCT-SPECIFICATION.md  04-SYSTEM-ARCHITECTURE.md  05-ARCHITECTURE-DETAIL.md  06-API-SPECIFICATION.md  07-UI-GUIDE.md  09-TECHNIQUE-COVERAGE-MAP.md  12-BACKEND-SECURITY-IMPLEMENTATION.md  13-FRONTEND-SECURITY-IMPLEMENTATION.md  14-DEVELOPMENT-GUIDE.md  15-SECURITY-AUDIT-COMPLIANCE.md  16-LIGHTWEIGHT-EDR-NDR-DESIGN.md  17-BUILD-VS-BUY-DECISION.md  18-AI-AGENT-IMPLEMENTATION-PLAN.md  19-FEATURE-CHECKLIST.md  20-CODE-QUALITY-STANDARDS.md  21-DEPLOYMENT-GUIDE.md  ARCHITECTURE-DIAGRAMS.md  CHANGELOG.md  CONTRIBUTING.md  ENV-REFERENCE.md  INSTALL.md  LICENSE  MVP-SPRINT-PLAN.md  OSS-ALTERNATIVES-GUIDE.md  PRODUCT-SPECIFICATION.md  REQUIREMENTS.md  SECURITY-REQUIREMENTS-IMPLEMENTATION.md  SECURITY.md  SIGMA-ENGINE-SPECIFICATION.md  TASK-0.5.2-COMPLETION-SUMMARY.md  TASK-0.5.3-COMPLETION-SUMMARY.md  TASK-0.5.3-COMPLETION-VERIFICATION.md  TASK_0.5.3_COMPLETION_SUMMARY.md  TECH-STACK.md  TECHNIQUE-COVERAGE-MAP.md  TYPE-COVERAGE-BASELINE.md  TYPE_COVERAGE_BASELINE.md  (+2 more)
agent-scheduler/backend/: .dockerignore  .env.example  =0.40  Dockerfile  deploy.sh  pyproject.toml  requirements.txt
agent-scheduler/backend/agent_scheduler/: auth.py  config.py  context.py  database.py  decomposer.py  executor.py  main.py  models.py  rules_checker.py  scheduler.py  task_loader.py
agent-scheduler/backend/agent_scheduler/agents/: __init__.py  base.py  integration_agent.py  lint_agent.py  security_audit.py  task_creator.py  test_agent.py  verifier.py
agent-scheduler/backend/agent_scheduler/routes/: api.py  auth.py  sse.py
agents/mxguard/: .dockerignore  00-README.md  01-ARCHITECTURE.md  02-PROJECT-STRUCTURE.md  03-CONFIGURATION.md  04-DEPLOYMENT.md  05-DEVELOPMENT.md  06-API-REFERENCE.md  07-BENCHMARKS.md  08-EVENT-OPTIMIZATION.md  Cargo.toml  Dockerfile  INSTALL.md
agents/mxguard/config/: mxguard.toml.example
agents/mxguard/src/: agent.rs  config.rs  health.rs  main.rs  resource_limits.rs
agents/mxguard/src/attack/: mod.rs
agents/mxguard/src/collectors/: auth.rs  file.rs  mod.rs  network.rs  process.rs  registry.rs  scheduled_task.rs
agents/mxguard/src/events/: mod.rs  ocsf.rs
agents/mxguard/src/transport/: http.rs  mod.rs
agents/mxwatch/: 00-README.md  01-ARCHITECTURE.md  02-PROJECT-STRUCTURE.md  Cargo.toml  Dockerfile  INSTALL.md
agents/mxwatch/benches/: packet_pipeline.rs
agents/mxwatch/config/: mxwatch.toml.example
agents/mxwatch/src/: config.rs  health.rs  lib.rs  main.rs  resource.rs
agents/mxwatch/src/capture/: afpacket_capture.rs  mod.rs  pcap_capture.rs
agents/mxwatch/src/detectors/: beacon.rs  c2_beacon.rs  data_exfil.rs  dga.rs  dns_tunnel.rs  mod.rs  port_scan.rs  proto_anomaly.rs
agents/mxwatch/src/events/: mod.rs  ocsf.rs
agents/mxwatch/src/parsers/: dns.rs  http.rs  mod.rs  rdp.rs  smb.rs  ssh.rs  tcp.rs  tls.rs  udp.rs
agents/mxwatch/src/transport/: http.rs  mod.rs
agents/mxwatch/tests/: ipv6_packet.rs
app/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements.txt
app/backend/alembic/: env.py
app/backend/alembic/versions/: 0001_initial_schema.py  0002_add_rules_connectors.py  0003_add_incidents_table.py  0004_add_incident_notes.py  0005_add_notification_channels_table.py  0006_add_events_table.py  0007_add_iocs_table.py  0008_add_assets_table.py  0009_add_audit_logs_table.py  0010_add_mfa_fields_to_users.py  0011_add_agents_table.py  0012_add_saved_queries_table.py  0013_add_coverage_snapshots_table.py  0014_add_coverage_targets_table.py  0015_add_last_login_inactive_lock_to_users.py  0016_add_must_change_password_to_users.py  0017_add_password_changed_at_to_users.py  0018_add_password_history_to_users.py  0019_add_suppression_rules_table.py  0020_add_routing_rules_to_notification_channels.py  0021_add_oidc_tables.py  0022_add_saml_tables.py  0022a_add_api_keys_table.py  0023_add_permission_sets.py  0024_add_agents_table.py  0025_add_reports_table.py  0026_add_scheduled_reports_table.py
app/backend/app/: __init__.py  main.py
app/backend/app/connectors/: __init__.py  base.py  opencti.py  prowler.py  registry.py  suricata.py  syslog.py  syslog_receiver.py  velociraptor.py  wazuh.py  zeek.py
app/backend/app/core/: access_log.py  api_key_auth.py  config.py  database.py  exceptions.py  logging.py  metrics.py  rate_limit.py  rbac.py  security.py  security_headers.py  validators.py  valkey.py
app/backend/app/db/: migrate.py  seed.py
app/backend/app/engine/: field_mapper.py  sigma_engine.py
app/backend/app/models/: __init__.py  agent.py  api_key.py  asset.py  audit_log.py  base.py  connector.py  coverage_snapshot.py  coverage_target.py  detection.py  event.py  incident.py  ioc.py  notification.py  oidc_provider.py  permission_set.py  report.py  rule.py  saml_provider.py  saved_query.py  scheduled_report.py  suppression_rule.py  user.py
app/backend/app/pipeline/: queue.py
app/backend/app/repositories/: __init__.py  agent_repo.py  api_key_repo.py  asset_repo.py  audit_log_repo.py  connector_repo.py  coverage_snapshot_repo.py  coverage_target_repo.py  detection_repo.py  event_repo.py  incident_repo.py  ioc_repo.py  notification_channel_repo.py  oidc_repo.py  permission_set_repo.py  report_repo.py  rule_repo.py  saml_repo.py  saved_query_repo.py  scheduled_report_repo.py  suppression_repo.py  user_repo.py
app/backend/app/schemas/: asset.py  audit_log.py  auth.py  common.py  detection.py  hunting.py  incident.py  ioc.py  overview.py  permission_set.py  report.py  saml.py  scheduled_report.py  sso.py  suppression.py
app/backend/app/services/: agent_monitor.py  alert_auto_closer.py  alert_email_output.py  alert_file_writer.py  alert_manager.py  alert_syslog_output.py  audit.py  (+26 more)
app/backend/sigma_rules/: dns_tunneling_long_query.yml  lateral_movement_smb.yml  lsass_memory_access.yml  new_service_creation.yml  powershell_encoded_command.yml
app/backend/tests/: conftest.py  test_grafana_dashboard.py  test_ndr_detection.py
(+438 files in other folders)
