[package]
name = "mxguard"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
description = "MxGuard - Endpoint Detection & Response agent for MxTac"
authors = ["MxTac Team"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP client for transport
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# File monitoring (Linux inotify)
inotify = "0.11"

# Async stream utilities (for inotify event stream)
tokio-stream = "0.1"

# File integrity monitoring - SHA-256 hashing
sha2 = "0.10"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Health endpoint
axum = "0.7"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Async trait support
async-trait = "0.1"

[dev-dependencies]
# UID lookup in process collector tests
libc = "0.2"
