[package]
name = "mxwatch"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
description = "MxWatch - Network Detection & Response agent for MxTac"
authors = ["MxTac Team"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Packet capture
pcap = "2"
pnet = "0.35"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP client for transport
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# HTTP server for health endpoint
axum = "0.7"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Async trait support
async-trait = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
# Raw Linux syscall wrappers for AF_PACKET + MMAP zero-copy capture
libc = "0.2"

[dev-dependencies]
# Temporary files for config loading tests
tempfile = "3"
# Mock HTTP server for transport integration tests
wiremock = "0.6"
# Benchmarking harness
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "packet_pipeline"
harness = false
