[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mxtac-backend"
dynamic = ["version"]
description = "MxTac Security Operations Platform — Backend API"
requires-python = ">=3.12"
dependencies = [
    # ── Web Framework ──────────────────────────────────────────────────────────
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",

    # ── Pydantic / Settings ────────────────────────────────────────────────────
    "pydantic[email]==2.10.3",
    "pydantic-settings==2.6.1",

    # ── Auth ───────────────────────────────────────────────────────────────────
    # KNOWN VULNERABILITY: python-jose has PYSEC-2024-232, PYSEC-2024-233
    # Tracked in SECURITY.md — migration to PyJWT is the remediation path.
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "pyotp==2.9.0",

    # ── Database ───────────────────────────────────────────────────────────────
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "aiosqlite==0.22.1",
    "alembic==1.14.0",

    # ── HTTP Client ────────────────────────────────────────────────────────────
    "httpx==0.28.1",
    "aiohttp==3.13.3",

    # ── YAML / Sigma ───────────────────────────────────────────────────────────
    "pyyaml==6.0.3",

    # ── Message Queue ──────────────────────────────────────────────────────────
    "valkey==6.1.1",

    # ── Search / Analytics ─────────────────────────────────────────────────────
    "opensearch-py[async]==3.1.0",

    # ── Metrics ────────────────────────────────────────────────────────────────
    "prometheus-fastapi-instrumentator==7.1.0",
    "prometheus-client==0.24.1",
]

[tool.setuptools.dynamic]
version = {attr = "app.__version__"}

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "httpx==0.28.1",
    "mypy==1.13.0",
    "ruff==0.8.3",
    "pip-audit==2.10.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
